# personal-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  conftest.py  pyproject.toml
.github/workflows/: test.yml
scripts/: daily-briefing.py  weekly-review.py
